--- a/Logotech-SPA/package.json
+++ b/Logotech-SPA/package.json
@@ -21,10 +21,15 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "@auth0/angular-jwt": "^2.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.2",
     "alertifyjs": "^1.11.2",
+    "angular-calendar": "^0.26.6",
+    "angularx-flatpickr": "^6.1.0",
     "bootstrap": "^4.2.1",
     "bootswatch": "^4.1.1",
     "core-js": "^2.5.4",
+    "date-fns": "^1.30.1",
+    "flatpickr": "^4.5.2",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^3.0.1",
     "rxjs": "^6.0.0",
