--- a/Logotech.API/appsettings.json
+++ b/Logotech.API/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName" :"dngzl4tq8",
+    "ApiKey": "345494544244976",
+    "ApiSecret": "p6-5hV7SEGl47BSAVYUwFLkNv1k"
+  }
 }
