--- a/Logotech-SPA/package.json
+++ b/Logotech-SPA/package.json
@@ -31,7 +31,9 @@
     "date-fns": "^1.30.1",
     "flatpickr": "^4.5.2",
     "font-awesome": "^4.7.0",
+    "ng2-file-upload": "^1.3.0",
     "ngx-bootstrap": "^3.0.1",
+    "ngx-gallery": "^5.9.1",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
