--- a/Logotech-SPA/package.json
+++ b/Logotech-SPA/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^6.0.3",
     "@auth0/angular-jwt": "^2.0.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.2",
+    "alertify": "^0.3.0",
     "alertifyjs": "^1.11.2",
     "angular-calendar": "^0.26.6",
     "angularx-flatpickr": "^6.1.0",
